<resources>
    <string name="app_name">Gift Geek</string>
    <string name="app_Name">GIFT GEEK</string>
    <string name="app_description">Get gifting with gift geek!</string>
    <string name="buttonLogin">Login</string>
    <string name="buttonSignUp">Sign Up</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_profile">Profile</string>
    <string name="buttonLogOut">Log Out</string>
    <string name="buttonEditProfile">Edit Profile</string>
    <string name="buttonStats">Statistics</string>
    <string name="editProfile">Edit Profile</string>
    <string name="newName">New Name</string>
    <string name="newPassword">New Password</string>
    <string name="newLastname">New Lastname</string>
    <string name="buttonWishlists">Wishlists</string>
    <string name="buttonReservedGifts">Reserved Gifts</string>
    <string name="done">Done</string>

    <string name="spinner_prompt">Select an image</string>

    <string-array name="dropdown_items">
        <item>Select a profile picture</item>
        <item>Luffy</item>
        <item>Kirby</item>
        <item>Dog</item>
        <item>Cat</item>
        <item>Ferrari</item>
        <item>Porsche</item>
    </string-array>
</resources>